; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_bsp.c_OnlyTextures.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_bsp.c_OnlyTextures.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"-onlytextures isn't working now...\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%s.bsp\00", align 1
@source = common dso_local global i8* null, align 8
@name = common dso_local global i32 0, align 4
@numDrawSurfaces = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OnlyTextures() #0 {
  %1 = alloca [1024 x i8], align 16
  %2 = alloca i32, align 4
  %3 = call i32 @Error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %4 = getelementptr inbounds [1024 x i8], [1024 x i8]* %1, i64 0, i64 0
  %5 = load i8*, i8** @source, align 8
  %6 = call i32 @sprintf(i8* %4, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %5)
  %7 = load i32, i32* @name, align 4
  %8 = call i32 @LoadMapFile(i32 %7)
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %1, i64 0, i64 0
  %10 = call i32 @LoadBSPFile(i8* %9)
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %16, %0
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @numDrawSurfaces, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  br label %16

16:                                               ; preds = %15
  %17 = load i32, i32* %2, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %2, align 4
  br label %11

19:                                               ; preds = %11
  %20 = getelementptr inbounds [1024 x i8], [1024 x i8]* %1, i64 0, i64 0
  %21 = call i32 @WriteBSPFile(i8* %20)
  ret void
}

declare dso_local i32 @Error(i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @LoadMapFile(i32) #1

declare dso_local i32 @LoadBSPFile(i8*) #1

declare dso_local i32 @WriteBSPFile(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
